--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 /*.Rcheck/
 
 # RStudio files
+.Rproj.user
 .Rproj.user/
 
 # produced vignettes
@@ -37,3 +38,8 @@ vignettes/*.pdf
 
 # R Environment Variables
 .Renviron
+
+# Rcpp files
+*.dll
+*.o
+*.so
