Add URL and BugReports fields.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,6 +21,8 @@ Imports:
     testthat
 LinkingTo: Rcpp, RcppArmadillo, roptim  
 License: MIT + file LICENSE
+URL: https://github.com/Nanostring-Biostats/GeoDiff
+BugReports: https://github.com/Nanostring-Biostats/GeoDiff
 Encoding: UTF-8
 Suggests: 
     knitr,
