--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: GeoDiff
 Type: Package
 Title: Count model based differential expression and normalization on GeoMx RNA data
-Version: 0.99.4
+Version: 0.99.5
 Authors@R: c(person("Lei", "Yang", email = "lyang@nanostring.com", role = c("aut")), 
              person("Zhi", "Yang", email = "zyang@nanostring.com", role = c("cre", "aut")))
 Description: A series of statistical models using count generating distributions 
@@ -19,7 +19,8 @@ Imports:
     graphics,
     stats,
     testthat,
-    GeomxTools
+    GeomxTools,
+    NanoStringNCTools
 LinkingTo: Rcpp, RcppArmadillo, roptim  
 License: MIT + file LICENSE
 URL: https://github.com/Nanostring-Biostats/GeoDiff
@@ -28,8 +29,7 @@ Encoding: UTF-8
 Suggests: 
     knitr,
     rmarkdown,
-    dplyr,
-    NanoStringNCTools
+    dplyr
 VignetteBuilder: knitr
 Depends: 
     R (>= 4.1.0),
