align with BiocCheck()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,3 +33,9 @@ importFrom(graphics,abline)
 importFrom(graphics,boxplot)
 importFrom(lme4,lFormula)
 importFrom(robust,covRob)
+import(Rcpp)
+import(Rfast)
+import(withr)
+import(stats)
+import(testthat)
+import(NanoStringNCTools)
