--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,8 @@ Title: Count model based differential expression and normalization on GeoMx RNA 
 Version: 1.1.3
 Authors@R: c(person("Nicole", "Ortogero", email = "nortogero@nanostring.com", role = c("cre")),
              person("Lei", "Yang", email = "lyang@nanostring.com", role = c("aut")), 
-             person("Zhi", "Yang", email = "zyang@nanostring.com", role = c("aut")))
+             person("Zhi", "Yang", email = "zyang@nanostring.com", role = c("aut")),
+             person("Ned", "Booker", email = "ned@procogia.com", role = c("aut")))
 Description: A series of statistical models using count generating distributions 
     for background modelling, feature and sample QC, normalization and differential 
     expression analysis on GeoMx RNA data. The application of these methods are 
