--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: GeoDiff
 Type: Package
 Title: Count model based differential expression and normalization on GeoMx RNA data
-Version: 1.1.2
+Version: 1.1.3
 Authors@R: c(person("Nicole", "Ortogero", email = "nortogero@nanostring.com", role = c("cre")),
              person("Lei", "Yang", email = "lyang@nanostring.com", role = c("aut")), 
-             person("Zhi", "Yang", email = "zyang@nanostring.com", role = c("aut")))
+             person("Zhi", "Yang", email = "zyang@nanostring.com", role = c("aut")),
+             person("Ned", "Booker", email = "ned@procogia.com", role = c("aut")))
 Description: A series of statistical models using count generating distributions 
     for background modelling, feature and sample QC, normalization and differential 
     expression analysis on GeoMx RNA data. The application of these methods are 
@@ -15,6 +16,7 @@ Imports:
     plyr,
     lme4,
     Rcpp (>= 1.0.4.6), 
+    Rfast,
     withr,
     methods,
     graphics,
