--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,11 +1,30 @@
 useDynLib(GeoDiff, .registration=TRUE)
 importFrom(Rcpp, evalCpp)
+importFrom(Rcpp,sourceCpp)
 
 
 import(Biobase)
+importFrom(Biobase,AnnotatedDataFrame)
+importFrom(Biobase,annotation)
+importFrom(Biobase,assayDataElement)
+importFrom(Biobase,experimentData)
+importFrom(Biobase,exprs)
+importFrom(Biobase,fData)
+importFrom(Biobase,featureNames)
+importFrom(Biobase,fvarLabels)
+importFrom(Biobase,notes)
+importFrom(Biobase,pData)
+importFrom(Biobase,phenoData)
+importFrom(Biobase,protocolData)
+importFrom(Biobase,sampleNames)
+importFrom(Biobase,varLabels)
+
+import(Matrix)
 import(testthat)
 importFrom(NanoStringNCTools, esBy)
 importFrom(Matrix, bdiag)
+importFrom(Rfast,colsums)
+importFrom(Rfast,rowsums)
 importFrom(lme4, lFormula)
 importFrom(robust, covRob)
 importFrom(graphics, boxplot)
@@ -13,7 +32,7 @@ importFrom(graphics, abline)
 importFrom(withr, local_tempdir)
 importFrom(withr, local_dir)
 importFrom(GeomxTools, featureType)
-
+importClassesFrom(GeomxTools,NanoStringGeoMxSet)
 
 exportMethods(aggreprobe)
 exportMethods(fitPoisBG)
