--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,5 +10,5 @@ jobs:
       - uses: EddieHubCommunity/gh-action-community/src/welcome@main
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          issue-message: "Our customer support team will be able to help you with this. Please email support@nanostring.com with your issue."
-          footer: "Thanks, Maddy"
+          issue-message: "Thanks for your interest in our tools! Our customer support team will be able to help you with this. Please email support@nanostring.com with your issue."
+          footer: "Thanks, NanoString Dev Team"
