--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,4 +11,4 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           issue-message: "Thank you for contacting us about our tools! To receive assistance, kindly email support@nanostring.com with detailed information about your issue. If applicable, attach a screenshot of any encountered errors and include a copy of the modified script in Notepad. Our customer support team will help facilitate a review and resolution of the issue."
-          footer: "Thank you for choosing NanoString, NanoString Dev Team"
+          footer: "Thank you for choosing NanoString,\nNanoString Dev Team"
